--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -51,6 +51,47 @@
          All-purpose flour works great! Avoid using flour with a high protein<br>
           content to keep your bread from turning out hard and dense.<br>
         -Walnuts: I LOVE adding chopped walnuts to my banana bread,<br>
-         but this is totally optional!</p>    
+         but this is totally optional!</p>
+         <h3>method</h3> 
+         <p> 
+           - Cream the stick of room-temperature butter and 1 cup sugar together with the 3 overripe bananas.<br> 
+
+            I typically dump all three into my KitchenAid mixer, hit go, and wander off for a bit.<br>
+              
+            Be sure to scrape the sides at least once, then mix a bit more.<br>
+
+            -Add in the 2 eggs and 3 Tablespoons milk, and mix until they're thoroughly incorporated.<br> 
+             Again, scrape sides as needed between bouts of stirring.<br>
+
+             -Add 2 cups flour and 1 teaspoon baking soda, and stir in gently until mixed.  Scrape<br> 
+             sides and mix again.  The resulting batter will be a thin pudding consistency.<br>
+
+            - If you're going to add nuts, coconut, chocolate chunks/chips, or any other extra bits,<br>
+             now is the time.  I generally figure about 2-3 Tablespoons is the right amount to add in. <br>
+              If you're using big chunks of nuts or chocolate chips instead of more finely chopped,<br>
+               make them heaping tablespoons.  There's really no way to go wrong -<br>  
+               just add things you think taste good with bananas.<br>
+
+               - Grease two loaf pans with the left-over butter wrapper.<br>
+               - Scoop half of batter into each loaf pan, and remove any drips from the edge. <br>
+
+                You may add any extras before or after filling the pans.  Since I tend to leave one plain,
+                 I just dump the bits on top of the second pan and mix them in with a fork.  It's a bit tidier
+                  to add them in earlier, but I'm lazy.<br>
+
+                You can also make this in muffin pans, or an 8x8 square pan if you prefer. <br>
+                 Just adjust the timing a bit, and pay close attention because you'll be using<br>
+                  the "cook it till it's done" method.<br>
+
+                 - Bake in 350F oven for 50-55 minutes until golden brown on top and a test poke from a <br>
+                  toothpick or skewer comes out clean.<br>
+
+                Let the pans cool slightly, then while still warm (but no longer dangerously hot) use a<br>
+                 silicone spatula or other flexible<br>
+                 implement to separate the bread from the edge of the pan, and gently turn the loaf out onto a wire rack to cool.<br>
+
+
+
+         </p>
 </body>
 </html>
