--- a/recipes/boba_tea.html
+++ b/recipes/boba_tea.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>boba tea</title>
+    <style>
     body{
         background-color: #f1e67e;
         
@@ -29,7 +30,7 @@
         align-items: center;
         
     }
-
+</style>
 </head>
 <body>
     <h1>boba tea</h1>
