--- a/index.html
+++ b/index.html
@@ -6,15 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>affordable recipes</title>
     <style>
+ body{
+    background-color: #f1e67e;
 
-
-
-
+ } 
+h1{
+    text-align: center;
+    text-shadow: 12pt, chocolate;
+    font-family: cursive;
+    font-size: larger;
+}
+p{
+        font-size: medium;
+        font-family: 'Times New Roman', Times, serif;
+        font-weight: 200;
+        text-align: left;
+        
+    }
+a{
+    color: crimson;
+}
+header{
+    background-color: rgb(75, 41, 17);
+}
         </style>
 
 </head>
 <body>
+    <header>
+        <img src="img/nutritional-header-heroB.webp" >
 <h1>Affordable recipes </h1>
+</header>
 <p>here you will find a list of really easy and affordable recipes that you can try anytime you want</p>
  <ul>
 <li><a href="recipes/banana_bread.html">banana bread </a>  </li>
@@ -26,4 +48,4 @@
   
     
 </body>
-</html>
+</html> 
